# grayterm

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: initial-implementation.md  readme-updates.md
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: client.rs  mod.rs  search.rs  streams.rs
src/cli/: mod.rs
src/output/: mod.rs
tests/: search_integration.rs  streams_integration.rs
